Situation is now bug-free!